--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -8,7 +8,7 @@
     <div class="navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">Book</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'bookings' %}">Book</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">Gallery</a>
