--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -202,3 +202,7 @@ background: #ec407a;
     border: 1px solid white;
 }
 
+.hover-effect:hover {
+    background-color: white;
+    color: black;
+}
