--- a/btr/templates/bookings/legend.html
+++ b/btr/templates/bookings/legend.html
@@ -11,7 +11,7 @@
             <div class="legend-item legend-orange">
                 <span>{% translate 'Limited' %}</span>
             </div>
-            <div class="legend-item legend-t">
+            <div class="legend-item legend-w">
                 <span>{% translate 'Available' %}</span>
             </div>
         </div>
