--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid mt-3">
@@ -8,46 +9,41 @@
     <div class="navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'bookings' %}">Book</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'bookings' %}">{% translate 'Book' %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">Gallery</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">{% translate 'Gallery' %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'reviews' %}">Reviews</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'reviews' %}">{% translate 'Reviews' %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'briefing' %}">Briefing</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'briefing' %}">{% translate 'Briefing' %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">FAQ</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">{% translate 'FAQ' %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'contacts' %}">Contacts</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'contacts' %}">{% translate 'Contacts' %}</a>
         </li>
       </ul>
       <ul class="navbar-nav" style="margin-left: auto;">
-        <li class="nav-item dropdown">
-          {% if user.profile_image %}
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="{{ user.profile_image.url|safe }}" alt="lk" width="35" height="35" style="border-radius: 50%; object-fit: cover;">
-          </a>
+        <li class="nav-item">
+          {% if not user.is_authenticated %}
+            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#guestModal">
+              <img src="{% static 'images/lk.png' %}" alt="lk" width="35" height="35">
+            </a>
+            {% include 'guest_modal.html' %}
           {% else %}
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="{% static 'images/lk.png' %}" alt="lk" width="35" height="35">
-          </a>
+            <a class="nav-link" id="openModalBtn" data-bs-toggle="modal" data-bs-target="#userModal">
+              {% if user.profile_image %}
+                <img src="{{ user.profile_image.url|safe }}" alt="lk" width="35" height="35" style="border-radius: 50%; object-fit: cover;">
+              {% else %}
+                <img src="{% static 'images/lk.png' %}" alt="lk" width="35" height="35">
+              {% endif %}
+            </a>
+            {% include 'user_modal.html' %}
           {% endif %}
-          <ul class="dropdown-menu">
-            {% if not user.is_authenticated %}
-            <li><a class="dropdown-item" href="{% url 'login' %}">Log In</a></li>
-            <li><a class="dropdown-item" href="{% url 'registration' %}">Sign Up</a></li>
-            <li><a class="dropdown-item" href="{% url 'login' %}">Profile</a></li>
-            {% else %}
-            <li><a class="dropdown-item" href="{% url 'profile' pk=user.pk %}">Profile</a></li>
-            <li style="background-color: red;"><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-            {% endif %}
-          </ul>
-        </li>
       </ul>
     </div>
   </div>
