--- a/btr/templates/users/profile.html
+++ b/btr/templates/users/profile.html
@@ -5,12 +5,12 @@
 {% block content %}
 <div class="container text-center text-white lg-m-t">
   <div class="row">
-        <h1 class="display-5 text-center text-white">{% translate 'Profile' %}</h1>
-        <div class="col"></div>
-        <div class="col text-center">
-            <hr class="h-line mb-5" style="opacity: 1;">
-        </div>
-        <div class="col"></div>
+    <h1 class="display-5 text-center text-white">{% translate 'Profile' %}</h1>
+    <div class="col"></div>
+      <div class="col text-center">
+        <hr class="h-line mb-5" style="opacity: 1;">
+      </div>
+    <div class="col"></div>
     </div>
 </div>
 <div class="container">
@@ -20,15 +20,15 @@
         <div class="card-body">
           <div class="d-flex flex-column align-items-center text-center">
             {% if user.profile_image %}
-            <img src="{{ user.profile_image.url|safe }}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+              <img src="{{ user.profile_image.url|safe }}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
             {% else %}
-            <img src="{% static 'images/user_image.png' %}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+              <img src="{% static 'images/user_image.png' %}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
             {% endif %}
             <div class="mt-3">
               <h4 class="text-white">{{ user.username }}</h4>
               <p class="text-secondary text-white mb-1">{{ user.email }}</p>
               <p class="text-secondary text-white font-size-sm">{{ user.phone_number }}</p>
-              <a class="btn btn-light" href="#" >Book Now</a>
+              <a class="btn btn-light" href="{% url 'bookings' %}" >{% translate 'Book Now' %}</a>
             </div>
           </div>
         </div>
@@ -37,11 +37,11 @@
     <div class="col mb-3">
       <div class="card card-bg text-white h-100">
         <div class="card-body">
-          <h3 class="card-title">Personal info</h3>
+          <h3 class="card-title">{% translate 'Personal info' %}</h3>
           <div class="my-5"></div>
           <div class="row">
             <div class="col-sm-3">
-              <h6 class="mb-0 text-white">Name</h6>
+              <h6 class="mb-0 text-white">{% translate 'Name' %}</h6>
             </div>
             <div class="col-sm-9 text-secondary text-white">
               {{ user.first_name }}
@@ -50,7 +50,7 @@
           <hr class="text-white">
           <div class="row">
             <div class="col-sm-3">
-              <h6 class="mb-0 text-white">Email</h6>
+              <h6 class="mb-0 text-white">{% translate 'Email' %}</h6>
             </div>
             <div class="col-sm-9 text-secondary text-white">
               {{ user.email }}
@@ -59,7 +59,7 @@
           <hr class="text-white">
           <div class="row">
             <div class="col-sm-3">
-              <h6 class="mb-0 text-white">Phone</h6>
+              <h6 class="mb-0 text-white">{% translate 'Phone' %}</h6>
             </div>
             <div class="col-sm-9 text-secondary text-white">
               {{ user.phone_number }}
@@ -67,7 +67,7 @@
           </div>
           <hr class="text-white">
           <div class="my-4"></div>
-          <a href="{% url 'user_edit' pk=user.pk %}" class="btn btn-outline-warning">Edit Profile</a>
+          <a href="{% url 'user_edit' pk=user.pk %}" class="btn btn-outline-warning">{% translate 'Edit Profile' %}</a>
         </div>
       </div>
     </div>
@@ -77,36 +77,34 @@
           <div class="card h-100 card-bg text-white">
             <div class="card-body">
               <h5 class="d-flex align-items-center mb-3">
-                Current rides
+                {% translate 'Current bookings' %}
               </h5>
               {% if not current_bookings %}
-              <ul>
-                <li>There are not current bookings yet</li>
-              </ul>
+              <h4 class="fs-4 text-center">{% translate 'There are not current bookings yet...' %}</h4>
               {% else %}
               <table class="table">
                 <thead class="text-white">
                   <tr>
                     <th scope="col">ID</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Begin time</th>
-                    <th scope="col">End time</th>
-                    <th scope="col">Status</th>
+                    <th scope="col">{% translate 'Date' %}</th>
+                    <th scope="col">{% translate 'Begin time' %}</th>
+                    <th scope="col">{% translate 'End time' %}</th>
+                    <th scope="col">{% translate 'Status' %}</th>
                   </tr>
                 </thead>
-                  <tbody>
+                <tbody>
                   {% for ride in current_bookings %}
-                  {% if ride.status == 'pending' %}
-                  <tr class="table-warning">
-                  {% else %}
-                  <tr class="table-success">
-                  {% endif %}
-                    <th scope="row">{{ ride.id }}</th>
-                    <td>{{ ride.booking_date }}</td>
-                    <td>{{ ride.start_time }}</td>
-                    <td>{{ ride.end_time }}</td>
-                    <td>{{ ride.status }}</td>
-                  </tr>
+                    {% if ride.status == 'pending' %}
+                      <tr class="table-warning">
+                    {% else %}
+                      <tr class="table-success">
+                    {% endif %}
+                      <th scope="row">{{ ride.id }}</th>
+                      <td>{{ ride.booking_date }}</td>
+                      <td>{{ ride.start_time }}</td>
+                      <td>{{ ride.end_time }}</td>
+                      <td>{{ ride.status }}</td>
+                    </tr>
                   {% endfor %}
                 </tbody>
               </table>
@@ -118,39 +116,37 @@
           <div class="card h-100 card-bg text-white">
             <div class="card-body">
               <h5 class="d-flex align-items-center mb-3">
-                History
+                {% translate 'History' %}
               </h5>
               {% if not completed_bookings %}
-              <ul>
-                <li>There are not completed bookings yet</li>
-              </ul>
+                <h4 class="fs-4 text-center">{% translate 'There are not completed bookings yet...' %}</h4>
               {% else %}
-              <table class="table">
-                <thead class="text-white">
-                  <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Begin time</th>
-                    <th scope="col">End time</th>
-                    <th scope="col">Status</th>
-                  </tr>
-                </thead>
+                <table class="table">
+                  <thead class="text-white">
+                    <tr>
+                      <th scope="col">ID</th>
+                      <th scope="col">{% translate 'Date' %}</th>
+                      <th scope="col">{% translate 'Begin time' %}</th>
+                      <th scope="col">{% translate 'End time' %}</th>
+                      <th scope="col">{% translate 'Status' %}</th>
+                    </tr>
+                  </thead>
                   <tbody>
                   {% for booking in completed_bookings %}
-                  {% if booking.status == 'completed' %}
-                  <tr class="table-primary">
-                  {% else %}
-                  <tr class="table-danger">
-                  {% endif %}
-                    <th scope="row">{{ booking.id }}</th>
-                    <td>{{ booking.booking_date }}</td>
-                    <td>{{ booking.start_time }}</td>
-                    <td>{{ booking.end_time }}</td>
-                    <td>{{ booking.status }}</td>
-                  </tr>
+                    {% if booking.status == 'completed' %}
+                      <tr class="table-primary">
+                    {% else %}
+                      <tr class="table-danger">
+                    {% endif %}
+                      <th scope="row">{{ booking.id }}</th>
+                      <td>{{ booking.booking_date }}</td>
+                      <td>{{ booking.start_time }}</td>
+                      <td>{{ booking.end_time }}</td>
+                      <td>{{ booking.status }}</td>
+                    </tr>
                   {% endfor %}
-                </tbody>
-              </table>
+                  </tbody>
+                </table>
               {% endif %}
             </div>
           </div>
