--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -93,6 +93,13 @@ body {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
+/* Booking Cards */
+
+.booking-card-header {
+    margin-left: 1rem;
+    margin-top: 1rem;
+}
+
 .list-rectangle {
 list-style: none;
 margin: 0;
