--- a/btr/templates/index.html
+++ b/btr/templates/index.html
@@ -5,106 +5,231 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid my-4 px-0">
-  <div class="row">
-    <img src="{% static 'images/frame.jpg' %}" alt="frame">
-  </div>
-</div>
-<h1 class="display-1 text-white text-center lg-m-t">{% translate 'Enduro bikes rental' %}</h1>
-<h1 class="display-3 text-white text-center mb-4">{% translate 'In Saint-Petersburg' %}</h1>
-<div class="container lg-m-b">
-  <div class="row">
-    <div class="col-12 text-center">
-    <a class="btn btn-outline-light btn-lg" href="https://vk.me/broteamracing">{% translate 'Book now' %}</a>
-      </div>
-  </div>
-</div>
-{% include 'carousel.html' %}
 
-<div class="container lg-m-y">
-  <div class="row text-center">
-    <h1 class="display-4 text-white">{% translate 'Bikes' %}</h1>
-    <div class="col"></div>
-    <div class="col text-center">
-      <hr class="h-line" style="opacity: 1;">
+<style>
+  .custom-border {
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 10px solid rgba(255, 255, 255, 0.5);
+    border-radius: 60px 0 0 60px;
+    border-right: none;
+    padding: 50px;
+  }
+  .img-style {
+    width: 350px;
+    height: 300px;
+    border-radius: 15px;
+    object-fit: cover;
+    margin: 30px; /* Добавлен отступ сбоку */
+  }
+  .gallery-bg {
+    background-color: rgb(56, 58, 74);
+    border: 10px solid rgba(255, 255, 255, 0.5);
+    border-radius: 60px 60px 60px 60px;
+  }
+  .img-ico {
+    width: 250px;
+    height: 250px;
+    margin: auto;
+    display: block;
+  }
+  .img-ico-s {
+    width: 50px;
+    height: auto;
+    margin-inline: 10px;
+  }
+</style>
+<div class="head-gradient">
+  <div class="container">
+    <div class="row">
+      <img src="{% static 'images/head.png' %}" alt="Head">
     </div>
-    <div class="col"></div>
+    <div class="row">
+      <div class="col-lg-6 col-12 d-flex align-items-center">
+        <h1 class="fs-1 text-left text-white custom-border">{% translate 'Pit-bikes and Enduro motorcycles rental' %}<br>{% translate 'in Saint-Petersburg' %}</h1>
+      </div>
+      <div class="col-lg-6 col-12 d-flex align-items-center">
+        <img src="{% static 'images/point1.png' %}" alt="point" width="auto" height="45%">
+        <div class="d-flex flex-column justify-content-between">
+          <p class="fs-2 mt-4 text-white">{% translate 'Saint-Petersburg' %}<br>{% translate 'Molodezhnoe' %}<br>{% translate 'Primorskoe h.659' %}</p>
+        </div>
+      </div>
+      <div class="row text-white text-center mb-5">
+        <div class="col-lg-4 col-0"></div>
+        <div class="col-lg-4 col-12">
+          <h3 class="fs-3">{% translate 'Book a ride now' %}</h3>
+          <hr class="h-line-light">
+          <img class="img-ico-s" src="{% static 'images/socials/tg.png' %}" alt="Tg">
+          <img class="img-ico-s" src="{% static 'images/socials/vk1.png' %}" alt="Vk">
+          <img class="img-ico-s" src="{% static 'images/socials/wts.png' %}" alt="WatsUp">
+          <img class="img-ico-s" src="{% static 'images/favicon.ico' %}" alt="Web">
+          <img class="img-ico-s" src="{% static 'images/tel.png' %}" alt="Tel">
+        </div>
+        <div class="col-lg-4 col-0"></div>
+      </div>
+    </div>
   </div>
-  <div class="row text-center">
-    <h2 class="mt-4 text-white">{% translate 'Carefully Maintained and Tuned' %}</h2>
-  </div>
-  <div class="row text-center">
-    <p class="h4 text-white mt-3">
-      {% translate 'All our motorcycles have undergone meticulous maintenance and tuning, ensuring high quality and safety' %}
-    </p>
+</div>
+<div class="gallery-gradient">
+  <div class="container">
+    <div class="row gallery-bg">
+      <div class="col-lg-4 col-sm-12 text-center mt-4">
+        <a href="{% static 'images/carousel/slide1.jpg' %}" data-lightbox="gallery">
+          <img class="img-style" src="{% static 'images/carousel/slide1.jpg' %}" alt="1">
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-12 text-center mt-4">
+        <a href="{% static 'images/carousel/slide2.jpg' %}" data-lightbox="gallery">
+          <img class="img-style" src="{% static 'images/carousel/slide2.jpg' %}" alt="1">
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-12 text-center mt-4">
+        <a href="{% static 'images/carousel/slide3.jpg' %}" data-lightbox="gallery">
+          <img class="img-style" src="{% static 'images/carousel/slide3.jpg' %}" alt="1">
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-12 text-center mt-4 mb-4">
+        <a href="{% static 'images/carousel/slide4.jpg' %}" data-lightbox="gallery">
+          <img class="img-style" src="{% static 'images/carousel/slide4.jpg' %}" alt="1">
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-12 text-center mt-4 mb-4">
+        <a href="{% static 'images/carousel/slide5.jpg' %}" data-lightbox="gallery">
+          <img class="img-style" src="{% static 'images/carousel/slide5.jpg' %}" alt="1">
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-12 text-center mt-4 mb-4">
+        <a href="{% static 'images/carousel/slide6.jpg' %}" data-lightbox="gallery">
+          <img class="img-style" src="{% static 'images/carousel/slide6.jpg' %}" alt="1">
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 
-{% include 'cards.html' %}
 
-<div class="container lg-m-y">
-  <div class="row text-center">
-    <h1 class="display-4 text-white">{% translate 'Take a simle Try' %}</h1>
-  </div>
-  <div class="row lg-m-t mx-5 justify-content-between">
-    <div class="col-auto">
-      <div class="card h-100 d-flex" style="width: 22rem; background-color: transparent; border-color: transparent;">
-        <img src="{% static 'images/ico_block/ico1.png' %}" class="card-img-top" alt="ico-1">
-        <div class="card-body text-white">
-          <h3 class="card-title">{% translate 'Guide accompaniment' %}</h3>
-          <hr class="h-line" style="opacity:1;">
-          <p class="card-text fs-5">
-            {% translate 'Throughout the trip you will be accompanied by an experienced guide who will teach you riding techniques and give advice.' %}
-          </p>
+<div class="head-gradient pt-5">
+  <div class="container">
+    <div class="row text-center">
+      <h1 class="display-4 text-white">{% translate 'Bikes' %}</h1>
+      <div class="col-lg-3 col-0"></div>
+      <div class="col-lg-6 col-12 text-center">
+        <hr class="h-line-light">
+      </div>
+      <div class="col-lg-3 col-0"></div>
+    </div>
+    <div class="row text-center">
+      <h2 class="mt-4 text-white">{% translate 'Carefully Maintained and Tuned' %}</h2>
+    </div>
+    <div class="row text-center">
+      <p class="h4 text-white mt-3 mb-5">
+        {% translate 'All our motorcycles have undergone meticulous maintenance and tuning, ensuring high quality and safety' %}
+      </p>
+    </div>
+    <div class="container">
+    <div class="row text-center">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+        <div class="card card-bg text-white mb-5">
+          <img src="{% static 'images/gr7_300/main.jpg' %}" class="card-img-top" alt="GR-7">
+            <div class="card-body">
+              <h5 class="card-title">GR-7 300</h5>
+              <p class="card-text">
+                {% translate 'The suspension is quite stiff, designed to avoid damaging it during landings after jumps' %}
+              </p>
+              <hr>
+              <p class="card-text">
+                {% translate 'Suitable for riders with a height of at least 175cm' %}
+              </p>
+            </div>
+            <ul class="list-rectangle ">
+              <li>{% translate '300cc engine' %}</li>
+              <li>{% translate '26 hp' %}</li>
+              <li>{% translate '2500₽ / hour' %}</li>
+            </ul>
+            <div class="card-body d-flex justify-content-center">
+              <a href="{% url 'book_create' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
+            </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+        <div class="card card-bg text-white mb-5">
+          <img src="{% static 'images/xmotos_250/main.jpg' %}" class="card-img-top" alt="X-motos">
+            <div class="card-body">
+              <h5 class="card-title">X Motos 250</h5>
+              <p class="card-text">
+                {% translate 'Excellent enduro motorcycle, very friendly with a very soft suspension' %}
+              </p>
+              <hr>
+              <p class="card-text">
+                {% translate 'Suitable for riders with a height of at least 160cm' %}
+              </p>
+            </div>
+            <ul class="list-rectangle ">
+              <li>{% translate '250cc engine' %}</li>
+              <li>{% translate '21 hp' %}</li>
+              <li>{% translate '2000₽ / hour' %}</li>
+            </ul>
+            <div class="card-body d-flex justify-content-center">
+              <a href="{% url 'book_create' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
+            </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+        <div class="card card-bg text-white mb-5">
+          <img src="{% static 'images/progasi_ibiza_300/main.jpg' %}" class="card-img-top" alt="Progasi">
+          <div class="card-body">
+            <h5 class="card-title">Progasi Ibiza 300</h5>
+            <p class="card-text">
+              {% translate 'Powerful, yet a friendly motorcycle with a soft KYB-TECH suspension' %}
+            </p>
+            <hr>
+            <p class="card-text">
+              {% translate 'Suitable for riders with a height of at least 175cm' %}
+            </p>
+          </div>
+          <ul class="list-rectangle ">
+            <li>{% translate '300cc engine' %}</li>
+            <li>{% translate '27 hp' %}</li>
+            <li>{% translate '2500₽ / hour' %}</li>
+          </ul>
+          <div class="card-body d-flex justify-content-center">
+            <a href="{% url 'book_create' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-auto">
-      <div class="card h-100 d-flex" style="width: 22rem; background-color: transparent; border-color: transparent;">
-        <img src="{% static 'images/ico_block/ico2.png' %}" class="card-img-top" alt="ico-2">
-        <div class="card-body text-white">
-          <h3 class="card-title">{% translate 'Safety Equipment' %}</h3>
-          <hr class="h-line" style="opacity:1;">
-          <p class="card-text fs-5">
-            {% translate 'All equipment for safe driving is already included in the rental price' %}
-          </p>
-        </div>
+  </div>
+</div>
+
+<div class="gallery-gradient pt-5">
+  <div class="container-fluid">
+    <div class="row text-center">
+      <div class="col-lg-3 col-0"></div>
+      <div class="col-lg-6 col-12">
+        <h1 class="display-4 text-white">{% translate 'Take a simle Try' %}</h1>
+        <hr class="h-line-dark">
       </div>
+      <div class="col-lg-3 col-0"></div>
     </div>
-    <div class="col-auto">
-      <div class="card h-100 d-flex" style="width: 22rem; background-color: transparent; border-color: transparent;">
-        <img src="{% static 'images/ico_block/ico3.png' %}" class="card-img-top" alt="ico-3">
-        <div class="card-body text-white">
-          <h3 class="card-title">{% translate 'No license required' %}</h3>
-          <hr class="h-line" style="opacity:1;">
-          <p class="card-text fs-5">
-            {% translate 'To operate an enduro motorcycle you do not need a driver\'s license, because it is sports equipment' %}
-          </p>
-        </div>
+    <div class="row justify-content-evenly pt-4">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-3 gallery-bg text-white mt-3">
+        <img class="img-ico" src="{% static 'images/ico_block/helmet.png' %}" alt="Equip">
+        <h4 class="fs-2 mb-3">{% translate 'Equipment' %}</h4>
+        <hr class="h-line-light">
+        <p class="fs-4 text-left">{% translate 'Do not worry about safety, all necessary equipment is already included in the rental price' %}</p>
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-3 gallery-bg text-white mt-3">
+        <img class="img-ico" src="{% static 'images/ico_block/guide.png' %}" alt="Guide">
+        <h4 class="fs-2 mb-3">{% translate 'Guide' %}</h4>
+        <hr class="h-line-light">
+        <p class="fs-4 text-left">{% translate 'Even if you have never sat in the saddle, our experienced guide will teach you everything' %}</p>
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-3 gallery-bg text-white mt-3">
+        <img class="img-ico" src="{% static 'images/ico_block/license.png' %}" alt="License">
+        <h4 class="fs-2 mb-3">{% translate 'No license' %}</h4>
+        <hr class="h-line-light">
+        <p class="fs-4 text-left">{% translate 'To operate an enduro motorcycle you do not need a driver license, because it is sports equipment' %}</p>
       </div>
     </div>
   </div>
 </div>
-
-
-<div class="container lg-m-y">
-  <div class="row text-center">
-    <h1 class="display-4 text-white">{% translate 'Routes' %}</h1>
-    <div class="col"></div>
-    <div class="col text-center">
-      <hr class="h-line" style="opacity: 1;">
-    </div>
-    <div class="col"></div>
-  </div>
-  <div class="row text-center">
-    <h2 class="mt-4 text-white">{% translate 'Combining Beautiful Scenery with Adrenaline' %}</h2>
-  </div>
-  <div class="row text-center">
-    <p class="h4 text-white mt-3">
-      {% translate 'Experience the perfect blend of stunning landscapes and exhilarating adventure' %}
-    </p>
-  </div>
-</div>
-{% include 'routes_carousel.html' %}
-{% include 'contacts.html' %}
 {% endblock %}
