--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -1,13 +1,13 @@
 {% load static %}
 {% load i18n %}
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid mt-3">
-    <a class="navbar-brand" href="{% url 'home' %}">
-      <img src="{% static 'images/favicon.ico' %}" alt="Icon" width="40" height="40">
-    </a>
-    <div class="navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
+<nav class="navbar navbar-expand-lg text-white">
+  <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/favicon.ico' %}" alt="Icon" width="40" height="40"></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'bookings' %}">{% translate 'Book' %}</a>
         </li>
@@ -45,6 +45,5 @@
             {% include 'user_modal.html' %}
           {% endif %}
       </ul>
-    </div>
   </div>
 </nav>
